src/components/TicketBlock.module.css
p {
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
    color: #333;
}

.ticket-block {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-radius: 5px;
    background-color: #fff;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
    padding: 15px 75px 15px 20px;
    cursor: pointer;
    transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
    z-index: 10;
}

.ticket-block:hover {
    background-color: #ececec;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
}

.ticket-row {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 0px 0;
    gap: 10px;
}

.ticket-col {
    display: flex;
    flex-direction: column;
}

.ticket-row:nth-child(1) {
    .ticket-col {
        padding-left: 25px;
    }
}
.ticket-row:nth-child(2) {
    .ticket-col {
        font-size: 12px;
    }
}
.respond-wrapper {
    background-color: #4CAF50;
    color: #fafafa;
    border-radius: 10px;
    padding: 0 8px;
    font-size: 12px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
}

.circular-image {
    width: 50px;
    height: 50px;
    border-radius: 50%;
}

.ticket-title {
    color: #333333;
    font-weight: bold;
}

.ticket-number {
    color: #757575;
    font-weight: bold;
}

.ticket-date {
    color: #333;
    font-size: 12px;
}

.ticket-menu {
    font-weight: bold;
}

.icon {
    width: 10px;
    height: 10px;
    fill: #757575;
    cursor: pointer;
}

.custom-checkbox {
    cursor: pointer;
}

.dropdown-container {
    position: relative;
    display: flex;
    flex-direction: column;
    z-index: 1;
}

.dropdown-menu {
    position: absolute;
    top: 15px;
    right: 0;
    background-color: #fafafa;
    color: #fafafa;
    border-radius: 5px;
    padding: 5px 0;
    font-size: 14px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
    z-index: 999;
}

.dropdown-menu ul {
    list-style: none;
    padding: 0;
    margin: 0;
    color: #333;
}

.dropdown-menu ul li {
    padding: 5px 60px 5px 15px;
    cursor: pointer;
    white-space: nowrap;
}

.dropdown-menu ul li:hover {
    background-color: rgba(255, 87, 51, 0.4);
}

.status-label {
    color: #757575;
    font-size: 12px;
    padding: 10px 15px;
}

.status-label span {
    border-bottom: 2px solid #757575;
}

